name:                HuskScheme
version:             0.1.0
-- synopsis:
-- description:
homepage:            https://github.com/arucil/HuskScheme
license:             MIT
license-file:        LICENSE
author:              arucil
maintainer:          xplzjwz@gmail.com
copyright:           2018 arucil
category:            Text
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable HuskScheme
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

library
  hs-source-dirs: src
  exposed-modules: Parser Parse Value
  build-depends: base >= 4.7 && < 5
  default-language: Haskell2010

test-suite laws
  type:                 exitcode-stdio-1.0
  default-Language:     Haskell2010
  hs-source-dirs:       test src
  ghc-options:          -threaded -Wall
  main-is:              test-laws.hs
  other-modules:        Parser
  build-depends:        base
                      , QuickCheck
                      , checkers

test-suite parse
  type:                 exitcode-stdio-1.0
  default-Language:     Haskell2010
  hs-source-dirs:       test src
  ghc-options:          -threaded -Wall
  main-is:              test-parse.hs
  other-modules:        Parse
                        Parser
                        Value
  build-depends:        base
                      , HUnit
                      , raw-strings-qq